factor.article/08. K8s/nginx-deployment-unique.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx-ns
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        command: 
        - /bin/sh
        - -c
        args:
        - |
          echo "<html>
          <head><title>NGINX</title></head>
          <body>
            <h1>Pod: </h1>
            <p>IP: </p>
            <p>Host: LT-0624-022.local</p>
            <p>Time: Fri Sep  5 11:08:15 +04 2025</p>
          </body>
          </html>" > /usr/share/nginx/html/index.html
          exec nginx -g 'daemon off;'
