factor.article/08. K8s/nginx-nginx-ns.v.2.0.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: bitnami/nginx:latest
        command: ["/bin/sh", "-c"]
        args:
          - envsubst < /usr/share/nginx/html/index.html.template > /usr/share/nginx/html/index.html && \
            exec nginx -g 'daemon off;'
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: index
          mountPath: /usr/share/nginx/html/index.html.template
          subPath: index.html
      volumes:
      - name: index
        configMap:
          name: nginx-index
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-ns
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 8080
